--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hiram",
-  "version": "1.6.0",
+  "version": "1.0.0",
   "description": "A personal card for Hiram Moncivais (@fancyvase)",
   "main": "/bin/card.js",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bnb/bitandbang.git"
+    "url": "git+https://github.com/fancyvase/hiram.git"
   },
   "homepage": "https://hiram.xyz",
   "scripts": {
@@ -19,6 +19,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+    "hiram",
     "card",
     "npm",
     "npm card",
